--- a/src/app/components/historic-table/historic-table.component.html
+++ b/src/app/components/historic-table/historic-table.component.html
@@ -1,61 +1,61 @@
-<div class="mat-elevation-z2">
+<div class="mat-elevation-z5 overflow-auto">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
-    <!-- Id Column -->
+    <!-- Column -->
     <ng-container matColumnDef="number">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
-      <td mat-cell *matCellDef="let row">{{ row['number'] }}</td>
+      <td mat-cell *matCellDef="let row; let i = index;"><!--{{ paginator.pageSize * paginator.pageIndex + i + 1 }} - -->{{ row['number'] }}</td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Column -->
     <ng-container matColumnDef="under30">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Menor de 30</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>MAYOR DE 30</th>
       <td mat-cell *matCellDef="let row">{{ row['under30'] }}</td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Column -->
     <ng-container matColumnDef="champion">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Campeón</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>CAMPEÓN</th>
       <td mat-cell *matCellDef="let row">{{ row['champion'] }}</td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Column -->
     <ng-container matColumnDef="position">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Posición</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>POSICIÓN</th>
       <td mat-cell *matCellDef="let row">{{ row['position'] }}</td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Column -->
     <ng-container matColumnDef="skillfulLeg">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Pierna hábil</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>PIERNA HÁBIL</th>
       <td mat-cell *matCellDef="let row">{{ row['skillfulLeg'] }}</td>
     </ng-container>
 
-    <!-- Name Column -->
+    <!-- Column -->
     <ng-container matColumnDef="goodChoice">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Buen fichaje</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>BUEN FICHAJE</th>
       <td mat-cell *matCellDef="let row">{{ row['goodChoice'] }}</td>
     </ng-container>
 
-    <!-- Name Column -->
-    <!--<ng-container matColumnDef="yesOdds">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Probabilidad de SÍ</th>
-      <td mat-cell *matCellDef="let row">{{ row['yesOdds'] }}</td>
+    <!-- Column -->
+    <ng-container matColumnDef="yesOdds">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>PROBABILIDAD DE SÍ</th>
+      <td mat-cell *matCellDef="let row">{{ row['yesOdds'] || '-' }}</td>
     </ng-container>
 
-    &lt;!&ndash; Name Column &ndash;&gt;
+    <!-- Column -->
     <ng-container matColumnDef="noOdds">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Probabilidad de NO</th>
-      <td mat-cell *matCellDef="let row">{{ row['noOdds'] }}</td>
-    </ng-container>-->
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>PROBABILIDAD DE NO</th>
+      <td mat-cell *matCellDef="let row">{{ row['noOdds'] || '-' }}</td>
+    </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
 
   <mat-paginator #paginator
-      [length]="dataSource?.data?.length"
+      [length]="dataSource.data.length"
       [pageIndex]="0"
-      [pageSize]="10"
+      [pageSize]="5"
       [pageSizeOptions]="[5, 10, 20]"
       aria-label="Select page">
   </mat-paginator>
