--- a/src/app/components/historic-table/historic-table.component.html
+++ b/src/app/components/historic-table/historic-table.component.html
@@ -8,7 +8,7 @@
 
     <!-- Column -->
     <ng-container matColumnDef="under30">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>MAYOR DE 30</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>MENOR DE 30</th>
       <td mat-cell *matCellDef="let row">{{ row['under30'] }}</td>
     </ng-container>
 
